--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,13 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
+    <repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
+
     <properties>
         <kotlin.compiler.incremental>true</kotlin.compiler.incremental>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -29,6 +36,7 @@
         <retrofit.version>2.3.0</retrofit.version>
         <kotlin-logging.version>1.4.6</kotlin-logging.version>
         <gson.version>2.8.1</gson.version>
+        <google-api.version>1.22.0</google-api.version>
     </properties>
 
     <dependencies>
@@ -46,11 +54,6 @@
             <artifactId>kotlin-reflect</artifactId>
             <version>${kotlin.version}</version>
         </dependency>
-        <!--<dependency>-->
-            <!--<groupId>io.reactivex.rxjava2</groupId>-->
-            <!--<artifactId>rxjava</artifactId>-->
-            <!--<version>${javarx.version}</version>-->
-        <!--</dependency>-->
         <dependency>
             <groupId>io.reactivex.rxjava2</groupId>
             <artifactId>rxkotlin</artifactId>
@@ -71,13 +74,11 @@
             <artifactId>converter-gson</artifactId>
             <version>${retrofit.version}</version>
         </dependency>
-
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>${gson.version}</version>
         </dependency>
-
 
         <dependency>
             <groupId>io.github.microutils</groupId>
