--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
-        <kotlin.version>1.1.3-2</kotlin.version>
+        <kotlin.version>1.1.50</kotlin.version>
         <javarx.version>2.1.2</javarx.version>
         <javarx-kotlin.version>2.1.0</javarx-kotlin.version>
         <retrofit.version>2.3.0</retrofit.version>
